--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body>
       Hello...! I am Ashish Vishwakarma
       I am a Full stack web developer...
+      I completed my graduation in BSc. Mathematics
     </body>
   </head>
 </html>
