--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
       Hello...! I am Ashish Vishwakarma
       I am a Full stack web developer...
-      I completed my graduation in BSc. Mathematicsefgg
+      I completed my graduation in BSc. Mathematicsefggegw
     </body>
   </head>
 </html>
